@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.12.7-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-12-07 07:14:02, took 00:13:28, with 80 workers, on 3400 cases, 0 failed, 0 traces, 5 retries
+-;-;-;2023-12-07 09:40:43, took 00:11:39, with 80 workers, on 3400 cases, 0 failed, 0 traces, 7 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
