@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.12.7-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-12-07 07:14:02, took 00:13:28, with 80 workers, on 3400 cases, 0 failed, 0 traces, 5 retries<br/>
+tested: 2023-12-07 09:40:43, took 00:11:39, with 80 workers, on 3400 cases, 0 failed, 0 traces, 7 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
