@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.12.7-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-12-07 07:25:25, took 00:11:06, with 60 workers, on 528 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2023-12-07 09:51:55, took 00:10:55, with 60 workers, on 528 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
